# CurseOfDestiny

./: .gitignore  .travis.yml  README.md  cod.cabal  devenv.nix  package.yaml  stack.yaml
app/: Main.hs
src/: Actions.hs  CardEffect.hs  Cards.hs  DataTypes.hs  DataTypesNew.hs  Decks.hs  EffectfulLens.hs  Element.hs  Game.hs  GameActionParser.hs  GameEffects.hs  GameIO.hs  PolysemyLens.hs  PolysemyTest.hs  Target.hs  Trigger.hs  actions.hs  main.hs  test.hs
src/Interpreter/: Descriptor.hs
test/: GameActionParserSpec.hs  GameSpec.hs  Spec.hs
