name:                cod
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MoritzR/CurseOfDestiny#readme
license:             GNU
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game, DataTypes, Cards, GameIO, Decks
  ghc-options:         -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , lens
  default-language:    Haskell2010

executable cod-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cod
  default-language:    Haskell2010

test-suite cod-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:       base
                     , cod
                     , lens
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MoritzR/CurseOfDestiny
